[tool.poetry]
name = "cronjob-controller"
version = "0.1.0"
description = ""
authors = ["Jimil Desai <jimildesai42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kopf = "^1.35.3"
kubernetes = "^21.7.0"
boto3 = "^1.26.107"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
